--- a/snack3.html
+++ b/snack3.html
@@ -1,29 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/snack2.css">
+    <link rel="stylesheet" href="./css/snack3.css">
     <title>JS - Snack 2</title>
 </head>
 
 <body>
 
-    <h1>List</h1>
 
-    <ul></ul>
+    <span></span>
+
 
     <div class="pages-button">
-        <a href="./snack3.html">Next</a>
+        <a href="./snack3">Next</a>
     </div>
 
     <div class="pages-button prev">
-        <a href="./index.html">Prev</a>
+        <a href="./snack2.html">Prev</a>
     </div>
 
-    <script type="text/javascript" src="./js/snack2.js"></script>
+    <script type="text/javascript" src="./js/snack3.js"></script>
 </body>
 
 </html>
