--- a/snack3.html
+++ b/snack3.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/snack3.css">
-    <title>JS - Snack 2</title>
+    <title>JS - Snack 3</title>
 </head>
 
 <body>
@@ -13,7 +16,7 @@
 
 
     <div class="pages-button">
-        <a href="./snack3">Next</a>
+        <a href="./snack4.html">Next</a>
     </div>
 
     <div class="pages-button prev">
